--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,9 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
+# Docker
+docker-compose.yml
+
 # dotenv environment variable files
 .env
 .env.development.local
