--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,6 +15,6 @@
    - '--image'
    - 'gcr.io/$PROJECT_ID/raisekit-backend:$COMMIT_SHA'
    - '--region'
-   - 'REGION'
+   - 'europe-west-3'
  images:
  - 'gcr.io/$PROJECT_ID/raisekit-backend:$COMMIT_SHA'
