--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "engines": {
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "fastify": "^4.12.0"
+    "fastify": "^4.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
