--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "fastify": "^4.13.0"
+    "dotenv": "^16.0.3",
+    "fastify": "^4.13.0",
+    "firebase-admin": "^11.5.0"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
