--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "jest"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^8.34.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20"
   }
 }
