--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "firebase-admin": "^11.5.0"
